[package]
name = "example-winit-taskbarcreated-winproc"
version = "0.1.0"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
winapi = { version = "0.3.9", features = ["windef", "minwindef"] }
winit = "0.22.2"

